# email-command

./: Cargo.toml  README.md  test.csv
src/: config.rs  main.rs  runner.rs
src/backends/: backend.rs  matrix_backend.rs  mod.rs  smtp_email_backend.rs
