[package]
name = "email-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.28.2", features=["full"] }
serde = { version="1.0.164", features=["derive"] }
toml = "0.7.4"
teloxide = "0.12.2"
lettre = { version="0.10.4", features=["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
async-trait = "0.1.68"
anyerror = "0.1.8"
rust-pop3-client = "0.2.1"
