[package]
name = "email-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.28.2", features=["full"] }
serde = { version="1.0.164", features=["derive"] }
toml = "0.7.4"
teloxide = "0.12.2"
lettre = { version="0.10.4", features=["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
async-trait = "0.1.68"
async-imap = { version="0.9.0", features=["runtime-tokio"], default-features = false }
anyhow = "1.0.71"
execute = "0.2.12"
async-native-tls = { version="0.5.0", features=["runtime-tokio", "vendored"], default-features = false }
futures-util = "0.3.28"
mail-parser = "0.8.2"
regex = "1.8.4"
